css/resume.css
.main .resume{
	display: grid;
	height: 100%;
	width: 100%;
	background: #000;
	grid-template-columns: 1fr 1fr 1fr;
	grid-template-rows: 16.5rem 4.5rem repeat(4, 4.6rem) 4.5rem 4.6rem 4.5rem;
	grid-template-areas: "div1 div1 div1"
	"div2 div2 div2"
	"div3 div4 div5"
	"div6 div7 div8"
	"div9 div10 div11"
	"div12 div13 ."
	"div14 div14 div14"
	"div15 div16 div17"
	"div18 div18 div18";
	color: #fff;
	gap: 3rem;
}
.main .resume div:nth-child(1){
	grid-area: div1;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	border-bottom: 2.5px solid #fff;
}
.main .resume div:nth-child(1) h1{
	color: gold;
	border-bottom: 2.5px solid #fff;
}
.main .resume div:nth-child(2){
	grid-area: div2;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
.main .resume div:nth-child(2) h1{
	color: gold;
	border-bottom: 2.5px solid #fff;
}
.main .resume div:nth-child(3){
	grid-area: div3;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
.main .resume div:nth-child(4){
	grid-area: div4;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
.main .resume div:nth-child(5){
	grid-area: div5;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
.main .resume div:nth-child(6){
	grid-area: div6;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
.main .resume div:nth-child(7){
	grid-area: div7;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
.main .resume div:nth-child(8){
	grid-area: div8;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
.main .resume div:nth-child(9){
	grid-area: div9;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
.main .resume div:nth-child(10){
	grid-area: div10;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
.main .resume div:nth-child(11){
	grid-area: div11;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
.main .resume div:nth-child(12){
	grid-area: div12;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
.main .resume div:nth-child(13){
	grid-area: div13;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
.main .resume div:nth-child(14){
	grid-area: div14;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	border-top: 2.5px solid #fff;
	border-bottom: 2.5px solid #fff;
	border-bottom-width: initial;
}
.main .resume div:nth-child(14) h1{
	color: gold;
}
.main .resume div:nth-child(15){
	grid-area: div15;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
.main .resume div:nth-child(16){
	grid-area: div16;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
.main .resume div:nth-child(17){
	grid-area: div17;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
.main .resume div:nth-child(18){
	grid-area: div18;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	border-top: 2.5px solid #fff;
}
.main .resume h3{
	background: gold;
	color: #000;
}
@media (max-width: 782px){
	.main .resume{
		grid-template-columns: 1fr;
		grid-template-rows: 15rem 3rem repeat(11, 5rem) 3rem repeat(3, 5rem) 3rem;
		grid-template-areas: "div1"
		"div2"
		"div3"
		"div4"
		"div5"
		"div6"
		"div7"
		"div8"
		"div9"
		"div10"
		"div11"
		"div12"
		"div13"
		"div14"
		"div15"
		"div16"
		"div17"
		"div18";
	}
	/* media for resume,h1 and h3 style */
	.main .resume h1{
		font-size: 1.1rem;
	}	
	.main .resume h5{
		font-size: 0.6rem;
	}
	.main .resume h4{
		font-size: 1rem;
	}
}

